--- a/demo/miniprogram/components/iot-p2p-player-ipc/player.wxml
+++ b/demo/miniprogram/components/iot-p2p-player-ipc/player.wxml
@@ -3,15 +3,15 @@
     <iot-p2p-common-player
       wx:if="{{innerOptions}}"
       id="{{playerId}}"
-      playerClass="{{playerClass}} {{innerOptions.needMjpg ? 'hide' : ''}}"
+      playerClass="{{playerClass}} {{isMjpgDevice ? 'hide' : ''}}"
       p2pMode="ipc"
       mode="{{innerOptions.playerRTC ? 'RTC' : 'live'}}"
+      muted="{{muted}}"
       targetId="{{targetId}}"
       flvUrl="{{flvUrl}}"
       autoReplay="{{sceneType === 'live'}}"
       superMuted="{{superMuted}}"
-      parseLivePlayerInfo="{{!innerOptions.needMjpg}}"
-      showControlRightBtns="{{innerOptions.playerShowControlRightBtns}}"
+      showControlRightBtns="{{!isMjpgDevice && innerOptions.playerShowControlRightBtns}}"
       productId="{{productId}}"
       deviceName="{{deviceName}}"
       xp2pInfo="{{xp2pInfo}}"
@@ -24,7 +24,7 @@
       bind:playError="onPlayError"
     />
     <iot-p2p-mjpg-player
-      wx:if="{{innerOptions && innerOptions.needMjpg}}"
+      wx:if="{{innerOptions && isMjpgDevice}}"
       id="{{mjpgPlayerId}}"
       playerClass="{{playerClass}}"
       targetId="{{targetId}}"
@@ -88,7 +88,6 @@
           deviceName="{{deviceName}}"
           intercomType="{{innerOptions.intercomType}}"
           p2pReady="{{p2pReady}}"
-          bind:ready="onVoiceReady"
           bind:voiceStateChange="onVoiceStateChange"
           bind:beforeStartVoice="onBeforeStartVoice"
           bind:afterStopVoice="onAfterStopVoice"
