--- a/demo/miniprogram/pages/xp2p-demo-1vN/demo.wxml
+++ b/demo/miniprogram/pages/xp2p-demo-1vN/demo.wxml
@@ -11,7 +11,7 @@
       id="{{playerId}}"
       targetId="{{targetId}}"
       sceneType="{{sceneType}}"
-      flvUrl="{{flvUrl}}"
+      flvFile="{{flvFile}}"
       mjpgFile="{{mjpgFile}}"
       productId="{{productId}}"
       deviceName="{{deviceName}}"
