--- a/demo/miniprogram/pages/xp2p-singleplayer/demo.wxml
+++ b/demo/miniprogram/pages/xp2p-singleplayer/demo.wxml
@@ -5,7 +5,7 @@
       wx:if="{{p2pMode === 'ipc'}}"
       id="{{playerId}}"
       targetId="{{targetId}}"
-      flvUrl="{{flvUrl}}"
+      flvFile="{{flvFile}}"
       productId="{{productId}}"
       deviceName="{{deviceName}}"
       xp2pInfo="{{xp2pInfo}}"
