feat: 拉流请求正常结束（设备主动停止推流的场景）时不自动重试

--- a/demo/miniprogram/components/iot-p2p-common-player/player.wxml
+++ b/demo/miniprogram/components/iot-p2p-common-player/player.wxml
@@ -1,5 +1,5 @@
 <view class="component iot-player {{playerClass}}">
-  <view class="player-container">
+  <view class="player-container" style="{{onlyDebugInfo ? 'display: none' : ''}}">
     <p2p-player
       wx:if="{{playerId && canUseP2P && needPlayer && hasPlayer}}"
       id="{{playerId}}"
