feat: 图片流设备支持显示audio调试信息

--- a/demo/miniprogram/components/iot-p2p-mjpg-player/player.wxml
+++ b/demo/miniprogram/components/iot-p2p-mjpg-player/player.wxml
@@ -22,6 +22,7 @@
     <view wx:if="{{showControlRightBtns}}" class="player-controls-container">
       <view class="player-controls left"></view>
       <view class="player-controls right">
+        <view class="player-control-item" bindtap="changeMuted">{{muted ? 'VOLx' : 'VOL'}}</view>
         <view class="player-control-item" bindtap="snapshotAndSave">Snapshot</view>
       </view>
     </view>
